--- a/src/main/resources/web-root/error.html
+++ b/src/main/resources/web-root/error.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<b th:text="${err_type}">[[${err_type}]]</b>
-<p th:text="${err_msg}">[[${err_msg}]]</p>
+<b th:text="${err_type}">error </b>
+<p th:text="${err_msg}">error </p>
 </body>
 </html>
